--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "@inertiajs/inertia-react": "^0.8.1",
         "@mui/material": "^5.15.6",
-        "react-country-state-city": "^1.1.0"
+        "react-country-state-city": "^1.1.0",
+        "react-icons": "^5.0.1"
     }
 }
